# YOHO

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: load_weights.py
experiments/: decoding_benchmark.py  spectorgram_normalization.py  test.py
original_whisper/tests/: test_timing.py  test_transcribe.py
original_whisper/whisper/: __init__.py  audio.py  decoding.py  model.py  transcribe.py  utils.py
train/: 0_train_tokenizer.py  1_transcription_pretrain_no_voiceprints.py  config.toml  create_training_session.py  dataloader.py  run_train_session.py  train_tokenizer.py
train/stages/: train_tokenizer.py  transcription_pretrain_no_voiceprints.py
train/tools/: plot_metrics.py  split_transcribed_tracks.py
train/utils/: augmenter.py  base_dataloader.py  config.py  dataloaders.py  sample.py  standardize_text.py
yoho/src/: config.py  tokenizer.py
yoho/src/models/: layers.py  whisper.py
yoho/src/models/layers/: attention.py
yoho/src/nn/: layers.py  model.py  whisper.py
yoho/src/preprocessing/: audio.py  mel_filterbanks.py  mel_spectogram.py  tokenizer.py
yoho/train/: convert_weights.py
