[tool.poetry]
name = "YOHO"
version = "0.1.0"
description = "You Only Hear Once"
authors = ["JirkaKlimes <jiriklimes920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jaxlib = { version = "^0.4.26+cuda12.cudnn89", platform = "linux", source = "jax" }
flax = "^0.8.2"
tiktoken = "^0.6.0"
matplotlib = "^3.8.4"
pyqt6 = "^6.7.0"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^3.7.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
